--- a/main.html
+++ b/main.html
@@ -10,7 +10,22 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<form>
+	<input type="text" id="name" required>
+	<input type="email" id="email" required>
+	<input type="radio" name="gender" required>Male
+	<input type="radio" name="gender" required>Female
+	<select id="laptop">
+		<option>Apple</option>
+		<option>Asus</option>
+		<option>HP</option>
+	</select>
+	<input type="number" id="age" required>
+	<input type="date" id="dob" required>
+	<input type="password" id="password" required>
+	<input type="url" id="portfolio">
+	<button>Submit</button>
+</form>
 </body>
 
 </html>
