--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
 	<input type="email" id="email" required>
 	<input type="radio" name="gender" required>Male
 	<input type="radio" name="gender" required>Female
+	<label for="laptop">Age</label>
 	<select id="laptop">
 		<option>Apple</option>
 		<option>Asus</option>
